--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,11 @@
 header{
-    text-align: center;
+    text-align: right;
     background-color: black;
     color: #58FAF4;
     font-size: 36px;
-    font-family: fantasy;
+    font-family: papyrus;
 }
 body{
     background-color: lightcoral;
+    color:aqua;
 }
