--- a/css/index-1.css
+++ b/css/index-1.css
@@ -1,9 +1,9 @@
 header{
-    text-align: right;
-    background-color: black;
+    text-align: center;
     color: #58FAF4;
-    font-size: 36px;
+    font-size: 40px;
     font-family: papyrus;
+    
 }
 body{
     background-color: lightcoral;
