--- a/css/index.css
+++ b/css/index.css
@@ -3,8 +3,15 @@ header{
     
 }
 h2{
-    margin: 400px auto;
+    display: inline;
+    position: absolute;
+    top: 500px;
 }
 body{
     background-color: black;
+}
+container{
+    width: 800px;
+    margin: 0 auto;
+    border-radius: 100px;
 }
